--- a/webjm/assets/style.css
+++ b/webjm/assets/style.css
@@ -1,86 +1,181 @@
 @charset "utf-8";
-/* CSS Document */
 /*头部样式*/
 body{
 	padding:0;
 	margin:0;
-	font-family:
+	font-family: '微软雅黑 Light','微软雅黑';
 	}
 /*初始化，为了去除默认样式*/
 ul,li{
-	padding:0;
-	margin:0;
-	}
+	padding: 0;
+	margin: 0;
+}
 .content{
-	width:100%;	
+	width:100%;
+	mini-width:1000px;
 	margin:0 auto;
 	}
 .header{
 	width:1000px;
 	height:100px;
-	background:#DFDFDF;
-	margin:0 auto;
+	background:#E1E1E1;
+	margin: 0 auto;
 	}
 .header img{
 	float:left;
 	}
-.quickLinks{
+.quickLink{
 	width:30%;
 	height:50px;
-	margin-top:32px;
 	float:right;
 	text-align:center;
+	margin-top:32px;
 	}
-.quickLinks a{
+.quickLink a{
+	color:#5F69E7;
+	text-decoration:none;
 	display:inline-block;
 	width:60px;
 	height:36px;
-	border:1px #09F solid;
-	color:#1176DB;
-	text-decoration:none;
 	font-size:12px;
 	line-height:36px;
-	font-family:"华文行楷";
+	border:1px #5F69E7 solid;
 	}
-.quickLinks a:hover{
-	box-shadow: 0 0 10px #00FF99;.
-	}
-	/*------------导航样式-----------*/
-	.nav{
-		width:100%;
-		height:60px;
-		background:#0a86d4;
-		}
-	.nav ul li{
-		text-align:center;
-		list-style:none;
-		float:left;
-		width:100px;
-		height:60px;
-		line-height:60px;
-		}
-    .nav ul li a{
-		display:block;
-		width:100px;
-		height:60px;
-		color:white;
-		text-decoration:none;
-		
-		}
-	.nav ul{
-		width:800px;
-		margin:0 auto;
-		}
-	.nav ul li:hover{
-		background:#0a507d;
-		transition:2s;
-		}
-		
-	/*------------导航样式结束-------*/
-	/*------------banner 开始-------*/
-	.banner{
-		width:100%;
-		height:300px;
-		background:url("../img/banner2.jpg")no-repeat;
-		background-size:100%;
-		}
+.quickLink a:hover{
+	box-shadow: 0 0 10px #A3D2E0;
+}
+/*造轮子 组件必须是可以重用的*/
+.title{
+	color: #2582cc;
+	font-weight: bold;
+	font-size: 20px;
+}
+/* ------------------导航样式-------------------------------*/
+.nav{
+	width: 100%;
+	height: 60px;
+	background: #0a86d4;
+
+}
+.nav ul li{
+	text-align: center;
+	list-style: none;
+	float: left;
+	width: 100px;
+	height:60px;
+	line-height: 60px;
+}
+.nav ul li a{
+	display: block;
+	width: 100px;
+	height:60px;
+	color:white;
+	text-decoration: none;
+}
+.nav ul{
+	width: 800px;
+	margin: 0 auto;
+}
+.nav ul li:hover{
+	background: #0a507d;
+	transition: 2s;
+}
+/* ------------------导航样式结束-------------------------------*/
+/* ------------------banner 开始-------------------------------*/
+.banner{
+	width: 100%;
+	background: url("../img/banner1.jpg") no-repeat;
+	background-size: 100%;
+}
+.swiper-container{
+	width: 100%;
+}
+/* ------------------banner 结束-------------------------------*/
+
+
+/* ------------------container 开始-------------------------------*/
+.container{
+	width: 1000px;
+	margin: 0 auto;
+	border: 1px #bbb solid;
+}
+.row{
+	width: 100%;
+	height: 280px;
+	margin-top: 20px;
+
+}
+#cols1-2{
+	width: 350px;
+}
+#cols1-2 ul{
+	margin-top: 40px;
+}
+#cols1-2 ul li{
+	list-style: none;
+	margin-top: 10px;
+}
+.channel{
+	font-size: 12px;
+	color: #bbb;
+}
+.datetime{
+	font-size: 12px;
+	float: right;
+	color:#bbb;
+}
+#cols1-2 ul li a{
+	color:#5d5d5d;
+	text-decoration: none;
+}
+#cols1-2 ul li a:hover{
+	color: #0a507d;
+}
+#cols1-3{
+	width: 250px;
+}
+.cols{
+	width: 300px;
+	height: 250px;
+	margin-left: 25px;
+	float: left;
+}
+#cols1-3 p{
+	/*上 右 下 左*/
+	/*padding: 0 5px 0 5px;*/
+	padding: 0 5px;
+}
+/*新闻幻灯*/
+#newSwiper{
+	margin-top: 40px;
+	height: 220px;
+}
+.newTitle{
+	width: 100%;
+	height: 30px;
+	line-height: 30px;
+	text-align: center;
+	color: #ffffff;
+	position: absolute;
+	bottom: 0;
+	z-index: 999;
+	font-size: 14px;
+	background: #000;
+	opacity: 0.5;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
